objects/FLODocs__FLO_Environment_Compare_Log__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the FLO Change Request associated to this FLO env compare log if the Env Compare was ran from the FLO Change Request</description>
        <inlineHelpText>This is the FLO Change Request associated to this FLO env compare log if the Env Compare was ran from the FLO Change Request</inlineHelpText>
        <label>Change Request</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Deployment Validation</relationshipLabel>
        <relationshipName>FLO_Environment_Compare_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Compare_Filters__c</fullName>
        <description>Filters of the Comparison done between Salesforce Orgs.</description>
        <inlineHelpText>Filters of the Comparison done between Salesforce Orgs.</inlineHelpText>
        <label>Compare Filters</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Comparison_Objective__c</fullName>
        <description>This is the objective of the comparison.  This can be a pre-refresh check or one of a number of specified deployment checks.</description>
        <inlineHelpText>Specify the purpose of this check.</inlineHelpText>
        <label>Comparison Objective</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Comparison_Objective</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Comparison_Type__c</fullName>
        <label>Comparison Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Date__c</fullName>
        <description>Date when the compare was.</description>
        <inlineHelpText>Date when the compare was.</inlineHelpText>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Different_Records_count__c</fullName>
        <label>Different Records count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Export_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether Export File was selected for Environment Comparison.</description>
        <label>Export File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__MetadataType__c</fullName>
        <label>Metadata Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__PackageToExclude__c</fullName>
        <label>Package To Exclude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Limit_To_Process__c</fullName>
        <label>Record Limit To Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Sandbox_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag if the source account is a sandbox</description>
        <inlineHelpText>Flag if the source account is a sandbox</inlineHelpText>
        <label>Sandbox Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Sandbox_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag if the target account is sandbox</description>
        <inlineHelpText>Flag if the target account is sandbox</inlineHelpText>
        <label>Sandbox Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Source_Account__c</fullName>
        <description>Salesforce org (username) as the Source one to execute the Env Compare</description>
        <inlineHelpText>Salesforce org (username) as the Source one to execute the Env Compare</inlineHelpText>
        <label>Source Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Source_Record_Count__c</fullName>
        <label>Source Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Clean_Up_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Target_Account__c</fullName>
        <label>Target Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Target_Record_Count__c</fullName>
        <label>Target Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Ui_Theme__c</fullName>
        <description>stores the user ui theme  in each execution</description>
        <label>Ui Theme</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Related to the Env compare log who has ran the FLO compare tool</description>
        <inlineHelpText>User Related to the Env compare log who has ran the FLO compare tool</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FLO_Environment_Compare_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Environment Compare Log</label>
    <nameField>
        <label>FLO Environment Compare Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Compare Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>